--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,26 @@
   <div id="body">
     <div id="header">
       Client
-      <hr />
+      <hr style="width: 1900px;" />
     </div>
   </div>
 
+  <div style="display: flex; justify-content: space-between ; margin-left: 700px; font-size: large; font-weight: bold;">
+    <div>
+      Goals
+    </div>
+    <div>
+      Objectives
+    </div>
+    <div>
+      PM
+    </div>
+
+
+  </div>
   <script src="js/arf.js"></script>
 
-  <div class="legend">
+  <div style="padding-top: 26px;" class="legend">
 
     <button onclick="goDark()">Toggle dark mode</button>
   </div>
