padding for dark-light button

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
 
   <div style="padding-top: 26px;" class="legend">
 
-    <button onclick="goDark()">Toggle dark mode</button>
+    <button style="padding:10px;font-weight: 600; " onclick="goDark()">Toggle dark mode</button>
   </div>
 
 
